# otadump

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: release.yaml
src/: cmd.rs  lib.rs  main.rs  payload.rs
src/protos/chromeos_update_engine/: update_metadata.proto
