[package]
authors = [
    "Kartik Sharma <kartik.sharma522@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
]
description = "Android OTA payload dumper"
categories = ["command-line-utilities", "android"]
edition = "2021"
keywords = ["android", "cli", "terminal"]
license = "MIT"
name = "otadump"
repository = "https://github.com/crazystylus/otadump"
readme = "README.md"
rust-version = "1.68.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bzip2 = "0.4.4"
hex = "0.4.3"
indicatif = "0.17.3"
memmap2 = "0.5.10"
prost = "0.11.8"
rayon = "1.7.0"
rust-lzma = "0.5.1"
sha2 = "0.10.6"
sync-unsafe-cell = "0.1.0"

[build-dependencies]
prost-build = { version = "0.11" }

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
