[package]
name = "otadump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bzip2 = { version = "0.4.4", features = ["static"] }
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.17.3"
memmap2 = "0.5.10"
prost = "0.11.8"
rayon = "1.7.0"
rust-lzma = "0.5.1"
sha2 = "0.10.6"
sync-unsafe-cell = "0.1.0"

[build-dependencies]
prost-build = "0.11"

[profile.release]
codegen-units = 1
lto = true
