[package]
authors = [
    "Kartik Sharma <kartik.sharma522@gmail.com>",
    "Ajeet D'Souza <98ajeet@gmail.com>",
]
description = "Extract partitions from Android OTA files"
categories = ["command-line-utilities", "android"]
edition = "2021"
keywords = ["android", "cli", "terminal"]
license = "MIT"
name = "otadump"
repository = "https://github.com/crazystylus/otadump"
readme = "README.md"
rust-version = "1.68.0"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bzip2 = { version = "0.4.4", features = ["static"] }
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
color-print = "0.3.4"
comfy-table = "6.1.4"
console = { version = "0.15.5", features = ["windows-console-colors"] }
hex = "0.4.3"
indicatif = "0.17.3"
memmap2 = "0.6.2"
nom = "7.1.3"
nom-derive = "0.10.1"
prost = "0.11.8"
rayon = "1.7.0"
rust-lzma = { version = "0.6.0", features = ["static"] }
sha2 = "0.10.6"
sync-unsafe-cell = "0.1.0"

[build-dependencies]
prost-build = "0.11"

[profile.release]
codegen-units = 1
debug = 0
lto = true
strip = true
